<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewmodel"
            type="com.example.lginmvvm.ui.auth.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">


        <ImageView
            android:id="@+id/image"
            android:layout_width="209dp"
            android:layout_height="170dp"
            android:layout_marginRight="-20dp"
            android:outlineAmbientShadowColor="#fcc203"
            android:src="@drawable/top_edge"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="-42dp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="180dp"
            android:layout_marginStart="30dp"
            android:text="Login"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/pl_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Please_sign_in_to_continue"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:textSize="17sp"
            android:layout_marginTop="20dp" />

        <EditText
            android:text="@={viewmodel.email}"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/pl_signin"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/E_MAIL"
            android:layout_marginTop="20dp"
            android:layout_margin="15dp"
            android:autofillHints="emailAddress"

            />

        <EditText
            android:text="@={viewmodel.password}"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/PASSWORD"
            android:layout_marginTop="20dp"
            android:layout_margin="15dp"
            android:autofillHints="password"
            />


        <Button
            android:onClick="@{viewmodel::onLoginButtonClick}"
            android:id="@+id/btn_login"
            android:layout_width="141dp"
            android:layout_height="62dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="250dp"
            android:layout_marginTop="70dp"
            android:text="@string/Log_in"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="90dp"
            android:textSize="17sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="280dp"
            android:textColor="#f5b342"
            android:textSize="17sp"
            />

            <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="370dp"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>